cabal-version: 3.0

name:                   cardano-entropy
version:                0.0.0.1
synopsis:               Primitive functions and data types
description:            Primitive functions and data types.
category:               Data
stability:              Experimental
homepage:               http://github.com/haskell-works/cardano-entropy#readme
bug-reports:            https://github.com/haskell-works/cardano-entropy/issues
author:                 John Ky
maintainer:             operations@iohk.io
copyright:              (c) 2021 IOHK
license:                Apache-2.0
license-file:           LICENSE
tested-with:            GHC == 8.10.4
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/haskell-works/cardano-entropy

flag bounds-checking-enabled
  description:          Enable bmi2 instruction set
  manual:               False
  default:              False

common base                       { build-depends: base                       >= 4.11       && < 5      }

common aeson                      { build-depends: aeson                      >= 1.5        && < 1.6    }
common async                      { build-depends: async                      >= 2.2.3      && < 2.3    }
common bytestring                 { build-depends: bytestring                 >= 0.9        && < 0.11   }
common cassava                    { build-depends: cassava                    >= 0.5.2.0    && < 0.6    }
common containers                 { build-depends: containers                 >= 0.6.4.1    && < 0.7    }
common cryptonite                 { build-depends: cryptonite                 >= 0.28       && < 0.29   }
common directory                  { build-depends: directory                  >= 1.2        && < 1.4    }
common exceptions                 { build-depends: exceptions                 >= 0.8        && < 0.11   }
common filepath                   { build-depends: filepath                   >= 1.4.2.1    && < 1.5    }
common generic-lens               { build-depends: generic-lens               >= 2.1.0.0    && < 2.2    }
common hedgehog                   { build-depends: hedgehog                   >= 1.0        && < 1.1    }
common hspec                      { build-depends: hspec                      >= 2.4        && < 2.8    }
common hw-hspec-hedgehog          { build-depends: hw-hspec-hedgehog          >= 0.1        && < 0.2    }
common lens                       { build-depends: lens                       >= 5.0.1      && < 5.1    }
common memory                     { build-depends: memory                     >= 0.15       && < 0.16   }
common monad-loops                { build-depends: monad-loops                >= 0.4.3      && < 0.5    }
common network-bsd                { build-depends: network-bsd                >= 2.8.1.0    && < 2.9    }
common optparse-applicative       { build-depends: optparse-applicative       >= 0.16.1.0   && < 0.17   }
common resourcet                  { build-depends: resourcet                  >= 1.2.4.2    && < 1.3    }
common semigroups                 { build-depends: semigroups                 >= 0.8.4      && < 0.20   }
common stm                        { build-depends: stm                        >= 2.5        && < 2.6    }
common streaming-bytestring       { build-depends: streaming-bytestring       >= 0.1.5      && < 0.3    }
common streaming-utils            { build-depends: streaming-utils            >= 0.2        && < 0.3    }
common temporary                  { build-depends: temporary                  >= 1.3        && < 1.4    }
common text                       { build-depends: text                       >= 1.2.4.1    && < 1.3    }
common time                       { build-depends: time                       >= 1.11.1.1   && < 1.12   }
common transformers               { build-depends: transformers               >= 0.4        && < 0.6    }
common unliftio-core              { build-depends: unliftio-core              >= 0.1.2.0    && < 0.3    }
common unordered-containers       { build-depends: unordered-containers       >= 0.2.9.0    && < 0.3    }
common vector                     { build-depends: vector                     >= 0.12       && < 0.13   }
common webdriver                  { build-depends: webdriver                  >= 0.9.0.1    && < 0.10   }

common cardano-entropy
  build-depends:        cardano-entropy

common project-config
  default-language:     Haskell2010

  if flag(bounds-checking-enabled)
    cpp-options:        -DBOUNDS_CHECKING_ENABLED

library
  import:               base, project-config
                      , aeson
                      , async
                      , bytestring
                      , cassava
                      , containers
                      , cryptonite
                      , directory
                      , filepath
                      , generic-lens
                      , lens
                      , network-bsd
                      , streaming-bytestring
                      , streaming-utils
                      , memory
                      , monad-loops
                      , optparse-applicative
                      , resourcet
                      , stm
                      , temporary
                      , text
                      , time
                      , unordered-containers
                      , vector
                      , webdriver
  exposed-modules:      Cardano.Entropy.Feed.Gis
                        Cardano.Entropy.Feed.Nyse
                        Cardano.Entropy.IO
                        Cardano.Entropy.Time
                        Cardano.Entropy.Types.Gis
                        Cardano.Entropy.Types.Nyse
  other-modules:        Paths_cardano_entropy
  autogen-modules:      Paths_cardano_entropy
  hs-source-dirs:       src

executable cardano-entropy
  import:               base, project-config
                      , aeson
                      , async
                      , bytestring
                      , cardano-entropy
                      , cryptonite
                      , directory
                      , filepath
                      , memory
                      , monad-loops
                      , optparse-applicative
                      , stm
                      , temporary
                      , text
                      , time
                      , unordered-containers
                      , webdriver
  main-is:              Main.hs
  other-modules:        App.Cli.Commands
                        App.Cli.Commands.Gis
                        App.Cli.Commands.Nyse
                        App.Options
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T -I0"

test-suite cardano-entropy-test
  import:               base, project-config
                      , bytestring
                      , directory
                      , exceptions
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , cardano-entropy
                      , transformers
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
